--- a/tests/integration/targets/podman_image/tasks/additional_tests.yml
+++ b/tests/integration/targets/podman_image/tasks/additional_tests.yml
@@ -186,6 +186,10 @@
           - extra_args_build is changed
           - "'Built image test-extra-args:latest from' in extra_args_build.actions[0]"
 
+    # SCP transport tests
+    - name: Include scp transport tests
+      include_tasks: scp.yml
+
     # Test push functionality with different transports
     - name: Test push to directory transport
       containers.podman.podman_image:
