Fix image idempotency in pull
Fix #981
Signed-off-by: Sagi Shnaidman <sshnaidm@redhat.com>

--- a/tests/integration/targets/podman_image/tasks/main.yml
+++ b/tests/integration/targets/podman_image/tasks/main.yml
@@ -589,6 +589,7 @@
     - include_tasks: additional_tests.yml
 
     - include_tasks: test_issue_947.yml
+    - include_tasks: test_issue_981.yml
 
   always:
     - name: Cleanup images
