Add new 6 version in CI
Signed-off-by: Sagi Shnaidman <sshnaidm@redhat.com>

--- a/ci/playbooks/pre.yml
+++ b/ci/playbooks/pre.yml
@@ -118,6 +118,7 @@
 
     - name: Get podman version
       shell: |
+        podman version || true
         podman version
         buildah version
         podman info --debug
