--- a/tests/integration/targets/podman_container/tasks/main.yml
+++ b/tests/integration/targets/podman_container/tasks/main.yml
@@ -20,6 +20,11 @@
         podman_version: 5
       when: podman_v.stdout is version('5.0.0', '>=')
 
+    - name: Set podman version to 6
+      set_fact:
+        podman_version: 6
+      when: podman_v.stdout is version('6.0.0', '>=')
+
     - name: Delete all container leftovers from tests
       containers.podman.podman_container:
         executable: "{{ test_executable | default('podman') }}"
