--- a/tests/integration/targets/podman_container_idempotency/tasks/main.yml
+++ b/tests/integration/targets/podman_container_idempotency/tasks/main.yml
@@ -19,6 +19,11 @@
     podman_version: 5
   when: podman_v.stdout is version('5.0.0', '>=')
 
+- name: Set podman version to 6
+  set_fact:
+    podman_version: 6
+  when: podman_v.stdout is version('6.0.0', '>=')
+
 - name: Prepare a container
   include_tasks: build_test_container.yml
 
